# IAM-agent

./: .gitignore  README.md
agents/identity/: .env.template  README.md  pyproject.toml
agents/identity/catalogues/: ca_catalogue.json  identity_catalogue.json
agents/identity/config/: default.yaml  scoring_weights.yaml
agents/identity/scripts/: check_pim_state.py  deploy_pim.py  run.py
agents/identity/src/identity_agent/: __init__.py  agent.py  auth.py  config.py
agents/identity/src/identity_agent/analyse/: ca_matcher.py  gap_analyser.py  scorer.py  signals.py
agents/identity/src/identity_agent/ingest/: __init__.py  access_reviews.py  app_registrations.py  auth_methods.py  base.py  break_glass.py  conditional_access.py  directory_roles.py  guests.py  hardening.py  mfa_registration.py  pim.py  risky_users.py  sign_in_risk.py
agents/identity/src/identity_agent/models/: __init__.py  assessment.py  gaps.py  recommendations.py  signals.py
agents/identity/src/identity_agent/output/: serialiser.py  store.py
agents/identity/src/identity_agent/recommend/: anthropic_backend.py  ca_drafter.py  generator.py  pim_drafter.py
agents/identity/tests/: conftest.py  test_ca_drafter.py  test_ca_matcher.py  test_gap_analyser.py  test_generator.py  test_models.py  test_pim.py  test_scorer.py  test_signals.py  test_store.py
